# voice-coding

./: README.md  pyproject.toml
voice_coding/: init_cmd.py  main.py  transcriber.py
